--- a/style.css
+++ b/style.css
@@ -5,15 +5,18 @@
 }
 
 body {
-  background-color: #242333;
+  /* background-color: #242333; */
   color: #fff;
+  background-color: #48011b;
+  background-image: linear-gradient(0deg, #48011b 0%, #001f1e 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  font-family: 'lato', sans-serif;
+  font-family: 'Jost', sans-serif;
   margin: 0;
+  font-size: 24px;
 }
 
 .movie-container {
